Fixed alignment

--- a/styles/about.module.scss
+++ b/styles/about.module.scss
@@ -61,10 +61,12 @@
 .avatar {
   display: flex;
   justify-content: space-evenly;
-  align-items: flex-end;
+  align-items: center;
   flex-direction: column-reverse;
+
   @media (min-width: $md) {
     flex-direction: row;
+    align-items: flex-end;
   }
 }
 
